# fast_pyspark_tester

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE  README.rst  build.py  pyproject.toml  requirements-build.txt  setup.cfg
.github/workflows/: tests.yml
docs/: demo.ipynb  iris.ipynb
docs/sphinx/: Makefile  api.rst  api_context.rst  api_fileio.rst  api_rdd.rst  api_streaming.rst  conf.py  dev.rst  parallel.rst  read_write.rst
docs/sphinx/version_index/: CNAME  index.html
logo/: create.py
src/main/python/fast_pyspark_tester/: __init__.py  __version__.py  accumulators.py  broadcast.py  cache_manager.py  context.py  exceptions.py  rdd.py  stat_counter.py  storagelevel.py  task_context.py  utils.py
src/main/python/fast_pyspark_tester/fileio/: __init__.py  file.py  textfile.py
src/main/python/fast_pyspark_tester/fileio/codec/: __init__.py  codec.py  lzma.py  (+1 more)
src/main/python/fast_pyspark_tester/sql/: casts.py  column.py  conf.py  context.py  dataframe.py  functions.py  group.py  internals.py  readwriter.py  schema_utils.py  session.py  types.py  utils.py
src/main/python/fast_pyspark_tester/streaming/: context.py  dstream.py  filestream.py
src/main/scripts/: benchmark_csv.py  benchmark_generators.py  ipcluster_simple.py  log_streaming.py  multiprocessing_performance_plot.py  pyspark_comparisons.py  pyspark_streaming.py  readme_example.py  readme_example_common_crawl.py  readme_example_human_microbiome.py  readme_example_word_count.py  starcluster_simple.py  tcpperf_client.py  tcpperf_plot.py  tcpperf_server.py
src/unittest/python/: data.7z  data.tar  data.tar.bz2  profile_textfile.py  test_cache.py  test_context.py  test_multiprocessing.py  test_rdd.py  test_resolve_filenames.py  test_sample.py  test_stat_counter.py  test_streaming_files.py  test_streaming_queue.py  test_streaming_tcp.py  test_textFile.py
src/unittest/python/sql/: test_casts.py  test_read.py  test_session.py  test_write.py
(+35 files in other folders)
