[build-system]
requires = ["pybuilder>=0.12.0"]
build-backend = "pybuilder.pep517"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--exitfirst"
addopts = '--cov=fast_pyspark_tester --cov-branch --cov-report=term-missing --cov-report=xml:target/reports/pytest_coverage.xml --cov-report=html:target/reports/pytest_coverage_html'
testpaths = [
    'src/unittest/python'
]


[tool.pylint.'BASIC']
variable-rgx = '[a-z0-9_]{1,30}$'
good-names = 'log'
max-line-length = 120

disable = 'bad-continuation,invalid-name,unused-argument,too-few-public-methods,no-self-use,missing-docstring,logging-format-interpolation,too-many-instance-attributes,duplicate-code,too-many-public-methods,too-many-arguments,protected-access,pointless-string-statement,too-many-lines,useless-object-inheritance,cyclic-import,bad-option-value'
# TODO: cyclic-import is temporary

[tool.pylint.'SIMILARITIES']
ignore-imports = 'yes'

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
